--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -4,7 +4,10 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+//buildToolsVersion "21.0.1"
+
 android {
+//    buildToolsVersion "26.0.2"
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.example.yujieshui.myapplication"
@@ -30,8 +33,8 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.9.1'
     compile 'com.fasterxml.jackson.core:jackson-core:2.9.2'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.9.2'
-    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.0"
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.fasterxml.jackson.module:jackson-module-kotlin:2.9.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
